src/App.css
#root {
  max-width: 1880px;
  margin: 0 auto;
  text-align: center;
  background-color: #1b4552;
}
body{
  background-color: powderblue;
}
html {
  scroll-snap-type: y mandatory;
  scroll-behavior: smooth;
  -ms-text-size-adjust: 100%;
}
section {
  scroll-snap-align: start;
  scroll-snap-stop: normal;
}
.mainContainer {
  display: grid;
  grid-template-columns: 15% 85%;
  width: 100%;
  height: 650vh;
  font-family: Arial, Helvetica, sans-serif;
}
/* NAVBAR START  */
.navBar {
  display: flex;
  position: sticky;
  top: 0;
  left: 0;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  background-color: #6d80a4;
  border-right: 10px solid powderblue;
}
.link--container {
  width: inherit;
  height: inherit;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.headerLink {
  height: 50px;
  width: 150px;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #d7e9f7;
  font-size: 1.4rem;
  text-decoration: none;
  margin: 1%;
  transition: linear 0.5s;
}
.headerLink:hover {
  background-color: #586989;
  color: whitesmoke;
}
.underLinkBorder {
  width: 150px;
  height: 1px;
  border: solid transparent;
  border-radius: 4px;
  background-color: powderblue;
}
.icon--container {
  width: inherit;
  /* height: 50px; */
  display: flex;
  justify-content: center;
}
.socialIcon {
  color: #d7e9f7;
  height: 40px;
  width: 40px;
  transition: 0.5s;
}
.socialIcon:hover {
  scale: 1.1;
}
/* NAVBAR END  */

/* LOGO CONTAINER START  */
.logo--container {
  grid-column: 2/3;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  border-bottom: powderblue solid 10px;
}
.logo {
  height: 600px;
  width: 1000px;
}

/* @media screen and (max-width: 600px) {
  .navBar {
    display: flex;
    position: sticky;
    top: 0;
    left: 0;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100px;
    background-color: #6d80a4;
    border-right: 4px solid #d7e9f7;
  }
  .logo--container {
    height: 150px;
    width: 600px;
  }
  .homePageContainer {
    width: inherit;
  }
  .servicesSmallPage {
    width: inherit;
  }
} */

/* LOGO CONTAINER END  */

/* HOMEPAGE CONTAINER START*/
.homePageContainer {
  grid-column: 2/3;
  width: 100%;
  height: 150vh;
  display: flex;
  flex-direction: column;
  width: inherit;
  border-bottom: powderblue solid 10px;
}

.openingStatement {
  font-size: 1.4rem;
  color: #d7e9f7;
  width: 80%;
  margin: 0 auto;
  height: 50vh;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}
.firstLetter {
  font-size: 2rem;
  font-family: "Times New Roman", Times, serif;
  color: black;
}

.statementContainer {
  width: 80%;
  color: #d7e9f7;
  display: flex;
  justify-content: center;
  flex-direction: column;
  text-align: left;
  margin: 0 auto;
}
.statementContainer li {
  margin: 0.5%;
  font-size: 1rem;
  list-style: none;
}
.firstStatement {
  font-weight: bold;
  font-family: "Times New Roman", Times, serif;
}

.homePageCard--Container {
  height: 150vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}
.HomePageCards {
  height: 500px;
  width: 300px;
  background-color: #d7e9f7;
  margin: 1%;
  border: 3px solid black;
  border-radius: 8px;
  color: black;
  transition: linear 0.5s;
}
.HomePageCards:hover {
  scale: 1.05;
}
.card--Header {
  display: flex;
  flex-direction: column;
  padding-top: 16px;
  align-items: center;
  height: 125px;
  width: inherit;
}
.card--Header h2 {
  font-size: 22px;
  text-decoration: underline;
}
.card--Header h3 {
  font-style: italic;
  font-size: 1.2rem;
}
.cardImages--Container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 200px;
  width: inherit;
}
.cardImages {
  width: 100%;
  height: 200px;
}
.bullet--Container {
  display: flex;
  flex-direction: column;
  height: 125px;
  width: inherit;
}
.bullet--Container li {
  text-align: left;
  font: 1rem;
  margin: 2%;
}
.homePage--left {
  display: grid;
  grid-template-columns: 60% 40%;
  height: 50vh;
  width: 100%;
}
.leftInfo--box {
  grid-column: 1/2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;
  text-align: left;
}
.rightImage--box {
  grid-column: 2/3;
  display: flex;
  justify-content: center;
  align-items: center;
}
.leftImage--box {
  grid-column: 1/2;
  display: flex;
  justify-content: center;
  align-items: center;
}
.homePage--right {
  display: grid;
  grid-template-columns: 40% 60%;
  height: 50vh;
  width: 100%;
}
.rightInfo--box {
  grid-column: 2/3;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  text-align: left;
}
.homePage--image {
  height: 250px;
  width: 400px;
  border: 3px solid black;
  border-radius: 16px;
}
.button {
  height: 50px;
  width: 100px;
  border: solid transparent 2px;
  background-color: #d7e9f7;
  border-radius: 12px;
  transition: 0.5s;
  cursor: pointer;
}
.button:hover {
  background-color: #bbcbd7;
  scale: 1.1;
}
/* HOMEPAGE BODY END*/

/* ABOUTUS PAGE START*/

.aboutUsSmallPage {
  grid-column: 2/3;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: 100vh;
  border-bottom: powderblue solid 10px;
  color: #d7e9f7;
  margin: 0 auto;
}
.aboutUs--Header {
  width: 80%;
  margin: 0 auto;
}
.aboutUsSmallPage h1 {
  font-size: 40px;
}
.aboutUsSmallPage p {
  font-size: 1.4rem;
}
.aboutUsCards--Container {
  display: flex;
  height: 500px;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}
.aboutUsCards {
  border: black solid 3px;
  background-color: #d7e9f7;
  color: black;
  border-radius: 8px;
  height: 350px;
  width: 400px;
  margin: 1%;
}
/* .aboutUsCards--Header{
  
} */
.aboutUsCard--Body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 1em;
}
.aboutUsCard--Body p {
  font-size: 1.1rem;
}
.aboutUsCard--Body p {
  font-size: 1rem;
}
.aboutIcons {
  height: 50px;
  width: 50px;
}
/* ABOUTUS PAGE END*/

/* SERVICE PAGE START*/

.servicesSmallPage {
  height: 100vh;
  grid-column: 2/3;
  color: #d7e9f7;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  border-bottom: powderblue solid 10px;
  margin: 0 auto;
}
.service--Container {
  color: #d7e9f7;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 80%;
  margin: 0 auto;
}
.servicesHeader {
  width: 80%;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.servicesHeader h1 {
  font-size: 40px;
}
.servicesHeader p {
  font-size: 1.4rem;
}
.servicesCard--Container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin: 1%;
}
.servicesCards {
  border: black solid 3px;
  background-color: #d7e9f7;
  color: black;
  border-radius: 8px;
  height: 520px;
  width: 300px;
  margin: 1%;
}
.servicesCards--Header {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100px;
  width: inherit;
  border-bottom: #1b4552 solid 3px;
}
.servicesCards--Body {
  height: 370px;
  width: inherit;
  display: flex;
  flex-direction: column;
  text-align: left;
  margin: 5px;
  list-style-position: inside;
  padding-left: 0; 
  margin: 5px;
}

.servicesCards--Body li {
  font-size: .9rem;
  margin: 1%;
}
/* SERVICE PAGE END*/

/* CONTACT PAGE START*/
.contactPage {
  grid-column: 2/3;
  color: #d7e9f7;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100vh;
  width: 100%;
  border-bottom: solid powderblue 10px;
  margin: 0 auto;
}
.contactBox {
  height: 25vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.contactContent {
  height: 25vh;
  width: 500px;
  display: flex;
  justify-content: center;
  border: powderblue 3px solid;
  background-color: #6d80a4;
  border-radius: 12px;
}
.contactPage--header {
  height: 40vh;
}
.contactPage--header h1 {
  font-size: 40px;
}
.contactPage--header p{
  font-size: 1.4rem;
}
.contactBox--Left {
  grid-column: 1/2;
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.contactBox--Right {
  grid-column: 2/3;
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.contactBox--Bottom {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin: 1%;
}
.contact {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  margin: 1%;
}
.contact input {
  height: 25px;
  width: 150px;
  border: solid black 2px;
  border-radius: 4px;
  margin: 1%;
}
.contact textarea {
  border-radius: 4px;
  border: solid black 2px;
  height: 50px;
  width: 300px;
}
.contact button {
  height: 40px;
  width: 100px;
  border: solid black 2px;
  border-radius: 4px;
  background-color: powderblue;
  margin: 1%;
  cursor: pointer;
  transition: .75s linear;
}
.contact button:hover {
  scale: 1.1;
}
/* SERVICE PAGE END*/

/* FOOTER PAGE START */
.footer {
  grid-column: 2/3;
  display: flex;
  /* flex-wrap: wrap; */
  flex-direction: column;
  height: 50vh;
  width: 80%;
  margin: 0 auto;
  color: #d7e9f7;
  border-bottom: powderblue solid 10px;
}
.footer p {
  font-size: 18px;
}
.cert--container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 400px;
}

.cert--container img {
  height: 200px;
  width: 200px;
  margin: 1%;
}
.social-icons a {
  color: #d7e9f7;
  text-decoration: none;
  font-size: 20px;
  margin: 2%;
}
/* FOOTER PAGE END */

/* @media screen and (max-width: 600px) {
  #root {
    max-width: 100%;
  }
  
  .navBar {
    height: 80px; 
    border-right: 4px solid #d7e9f7;
  }

  .logo--container {
    height: 150px;
    width: 100%;
  }

  .homePageContainer {
    height: auto; 
  }

  .homePageCard--Container {
    height: auto; 
  }
  .HomePageCards {
    height: auto; 
    width: 90%; 
  }
  .button {
    height: 40px;
    width: 80px;
  }

  .aboutUsSmallPage {
    height: auto; 
  }

  .aboutUsCards {
    height: auto; 
    width: 90%; 
  }

  .servicesSmallPage {
    height: auto; 
  }

  .servicesCards {
    height: auto; 
    width: 90%;
  }

  .contactPage {
    height: auto; 
  }

  .contactContent {
    width: 90%; 
  }

  .footer {
    height: auto; 
    width: 100%;
  }

  .cert--container img {
    height: 150px;
    width: 150px; 
  }
} */

